--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,6 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
 
 # vercel
 .vercel
@@ -38,6 +37,6 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-.env
-
 /media
+
+.pnpm-store
